--- a/utils/docker-compose.yml
+++ b/utils/docker-compose.yml
@@ -1,38 +1,14 @@
-version: '3.4'
+version: '3.7'
 services:
-  db:
-    image: mysql:5.7.22
-    command: mysqld --default_authentication_plugin=mysql_native_password
-    restart: always
-    environment:
-      TZ: America/Sao_Paulo
-      MYSQL_ROOT_PASSWORD: docker
-      MYSQL_USER: docker
-      MYSQL_PASSWORD: docker
-      MYSQL_DATABASE: wordpress
-    ports:
-      - "3306:3306"
-    networks:
-      - wordpress-network
-    volumes:
-      - /mnt/nfs/mysql_data:/var/lib/mysql
   wordpress:
-    image: wordpress:latest
+    image: wordpress
+    volumes:
+      - /efs/website:var/www/html
+    ports:
+      - "80:80"
     restart: always
     environment:
-      TZ: America/Sao_Paulo
-      WORDPRESS_DB_HOST: db
-      WORDPRESS_DB_NAME: wordpress
-      WORDPRESS_DB_USER: root
-      WORDPRESS_DB_PASSWORD: docker
-    ports:
-      - 80:80
-    volumes:
-      - /mnt/nfs/wordpress:/var/www/html
-    depends_on:
-      - db 
-    networks:
-      - wordpress-network
-networks:
-  wordpress-network:
-    driver: bridge
+      WORDPRESS_DB_HOST: <ENDPOINT_DO_SEU_RDS> 
+      WORDPRESS_DB_USER:  <SEU_USUARIO_DO_DB>
+      WORDPRESS_DB_PASSWORD: <SUA_SENHA_DO_DB>
+      WORDPRESS_DB_NAME: <NOME_DO_SEU_DB>
